src/test/ui/array-slice-vec/vec-macro-with-comma-only.stderr
error: no rules expected the token `,`
  --> $DIR/vec-macro-with-comma-only.rs:2:10
   |
LL |     vec![,];
   |          ^ no rules expected this token in macro call

error: aborting due to previous error

